objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adam_Actions__c</fullName>
        <label>Adam Actions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deals_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deals_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deals_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>To capture the category information of the deal for opportunity record type = "Enterprise Solution"</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Code_Name__c</fullName>
        <label>Code Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_Party__c</fullName>
        <description>Name of the entity who will be Counter Party of the deal.</description>
        <label>Counterparty</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_To_Close_Deal__c</fullName>
        <formula>Closed_Date__c - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Close Deal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gate_Details__c</fullName>
        <formula>CASE(Phase__c , 

"A","Agreement Signed",
"B","Term Sheet Signed",
"C","Deal Released",
"D","Preliminary Discussions",
"E","Pipeline",
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gate Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate/Finance</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Services/Partnership</fullName>
                </value>
                <value>
                    <fullName>Physical Product</fullName>
                </value>
                <value>
                    <fullName>Digital Product</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Brand Marketing</fullName>
                </value>
                <value>
                    <fullName>Community/Expansion</fullName>
                </value>
                <value>
                    <fullName>Enterprise Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Location for corporate deals</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>User can put notes in this field.</description>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_desk__c</fullName>
        <inlineHelpText>Number of desk for Corporate deals</inlineHelpText>
        <label>Number of desk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <description>Completion of the Deal in terms in Percent</description>
        <label>%</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_Value__c</fullName>
        <formula>VALUE(TEXT( Percent_Complete__c ))/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Gate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority_In_Number__c</fullName>
        <formula>CASE(TEXT(Priority__c), "I/U", 1, "I/NU", 2, "NI/U", 3, "NI/NU", 4, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority In Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I/U</fullName>
                    <color>#FF0000</color>
                    <label>I/U</label>
                </value>
                <value>
                    <fullName>I/NU</fullName>
                    <color>#FF6600</color>
                    <label>I/NU</label>
                </value>
                <value>
                    <fullName>NI/U</fullName>
                    <color>#FFFF66</color>
                    <label>NI/U</label>
                </value>
                <value>
                    <fullName>NI/NU</fullName>
                    <color>#3366FF</color>
                    <label>NI/NU</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pencils Down</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <formula>TEXT( Priority_In_Number__c ) + " - "+ TEXT(Priority__c) + " - " + Code_Name__c  + " - " + TEXT(Phase__c) + IF(ISBLANK(Timing__c)," - TBD"," - " +  Text(Month(Timing__c)) + "/" + Text(Day(Timing__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Timing__c</fullName>
        <label>Next Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Deal</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>Corporate_Dead_Deals</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Phase__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Timing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Dead</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Corporate</value>
        </filters>
        <label>Corporate Dead Deals</label>
    </listViews>
    <listViews>
        <fullName>Corporate_Open_Deals</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Phase__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Timing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Corporate</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Corporate Open Deals</label>
    </listViews>
    <listViews>
        <fullName>Development_Closed_Deals</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Phase__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Timing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Development</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Development Closed Deals</label>
    </listViews>
    <listViews>
        <fullName>Development_Open_Deals</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Phase__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Timing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Development</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Development Open Deals</label>
    </listViews>
    <listViews>
        <fullName>Open_Deals</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Phase__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Timing__c</columns>
        <columns>Percent_Complete__c</columns>
        <columns>Team__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Open Deals</label>
    </listViews>
    <listViews>
        <fullName>Real_Estate_Closed_Deals</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Phase__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Timing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Real Estate</value>
        </filters>
        <label>Real Estate Closed Deals</label>
    </listViews>
    <listViews>
        <fullName>Real_Estate_Dead_Deals</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Phase__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Timing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Dead</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Real Estate</value>
        </filters>
        <label>Real Estate Dead Deals</label>
    </listViews>
    <listViews>
        <fullName>Real_Estate_Open_Deals</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Phase__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Timing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Real Estate</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Real Estate Open Deals</label>
    </listViews>
    <listViews>
        <fullName>Services_Closed_Deals</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Phase__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Timing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Services</value>
        </filters>
        <label>Services Closed Deals</label>
    </listViews>
    <listViews>
        <fullName>Services_Dead_Deals</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Phase__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Timing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Dead</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Services</value>
        </filters>
        <label>Services Dead Deals</label>
    </listViews>
    <listViews>
        <fullName>Services_Open_Deals</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Phase__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Timing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Services</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Services Open Deals</label>
    </listViews>
    <validationRules>
        <fullName>Percent_Complete_is_required_field</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( TEXT(Percent_Complete__c) )</errorConditionFormula>
        <errorDisplayField>Percent_Complete__c</errorDisplayField>
        <errorMessage>Please enter a value for Percent Complete</errorMessage>
    </validationRules>
</CustomObject>